--- a/Templates/Appcamera/index.html
+++ b/Templates/Appcamera/index.html
@@ -8,8 +8,9 @@
     <title>Captura Web</title>
 </head>
 <body>
+    <img id="logo" src="{% static 'logo.jpeg' %}" alt="Logo">
     <header class="titulo">
-        <h1>CAPTURA DE IMAGENES DE CEDULAS</h1>
+        <h1>CAPTURA DE IMAGENES</h1>
     </header>
 
     <div class="canvas-camera">
